# desstv

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
desstv/: __init__.py  __main__.py  command.py  convert.py  decode.py  spec.py  util.py
test/: test_command.py  test_decoder.py
