[tool.pdm]

[project]
name = "desstv"
version = "0.1"
description = "Command line SSTV decoder for existing audio files, sound card free"
authors = [
    { name = "colaclanth", email = "nomail@c0l.me" },
    { name = "boholder", email = "bottleholder@anche.no" },
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "GPLv3" }
keywords = ["sstv decode"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
]

dependencies = [
    # image processing
    "Pillow",
    # audio processing
    "PySoundFile",
    # scientific calculation
    "numpy",
    "scipy"
]

[project.urls]
Homepage = "https://github.com/boholder/desstv"
"Bug Tracker" = "https://github.com/boholder/desstv/issues"

# The key config for building executable wheel
[project.scripts]
desstv = "desstv.__main__:main"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

# Scripts for development
[tool.pdm.scripts]
test = "pytest"
lint = "pre-commit run --all-files"

[tool.pdm.scripts.coverage]
shell = "coverage run -m pytest tests && coverage html"
help = "Open the index.html with browser to check coverage"

[tool.pytest.ini_options]
pythonpath = ["desstv", "tests"]
testpaths = ["tests"]

[tool.pdm.dev-dependencies]
test = [
    "pytest",
    "coverage[toml]",
    "setuptools",
]
lint = ["pre-commit"]

# Coveralls job in github action needs this config
[tool.coverage.run]
relative_files = true

# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html?highlight=%5Btool.black%5D#configuration-format
[tool.black]
line-length = 120

# https://github.com/charliermarsh/ruff#configuration
[tool.ruff]
line-length = 120
select = [
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "E",    # pycodestyle
  "F",    # pyflakes
  "PGH",  # pygrep-hooks
  "RUF",  # ruff
  "W",    # pycodestyle
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]
extend-ignore = ["B019"]
src = ["src"]
target-version = "py310"